--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</a>
 								</div>
 								<div class="menu-item">
-									<a class="menu-link" href="../../demo3/dist/profil.html">
+									<a class="menu-link" href="dist/profil.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
