--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</a>
 								</div>
 								<div class="menu-item">
-									<a class="menu-link" href="dist/profil.html">
+									<a class="menu-link" href="profil.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
@@ -128,7 +128,7 @@
 										<div class="menu-content d-flex align-items-center px-3">
 											<!--begin::Avatar-->
 											<div class="symbol symbol-50px me-5">
-												<img alt="Logo" src="assets/media/avatars/150-26.jpg" />
+												<img alt="Logo" src="assets/media/img-profil/anisa.png" />
 											</div>
 											<!--end::Avatar-->
 											<!--begin::Username-->
@@ -146,12 +146,12 @@
 									<!--end::Menu separator-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/overview.html" class="menu-link px-5">My Profile</a>
+										<a href="#" class="menu-link px-5">My Profile</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/pages/projects/list.html" class="menu-link px-5">
+										<a href="#" class="menu-link px-5">
 											<span class="menu-text">My Projects</span>
 											<span class="menu-badge">
 												<span class="badge badge-light-danger badge-circle fw-bolder fs-7">3</span>
@@ -169,22 +169,22 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/referrals.html" class="menu-link px-5">Referrals</a>
+												<a href="#" class="menu-link px-5">Referrals</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/billing.html" class="menu-link px-5">Billing</a>
+												<a href="#" class="menu-link px-5">Billing</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">Payments</a>
+												<a href="#" class="menu-link px-5">Payments</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link d-flex flex-stack px-5">Statements
+												<a href="#" class="menu-link d-flex flex-stack px-5">Statements
 												<i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip" title="View your statements"></i></a>
 											</div>
 											<!--end::Menu item-->
@@ -207,7 +207,7 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">My Statements</a>
+										<a href="#" class="menu-link px-5">My Statements</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -224,7 +224,7 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5 active">
+												<a href="#" class="menu-link d-flex px-5 active">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/united-states.svg" alt="" />
 												</span>English</a>
@@ -232,7 +232,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
 												</span>Spanish</a>
@@ -240,7 +240,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/germany.svg" alt="" />
 												</span>German</a>
@@ -248,7 +248,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/japan.svg" alt="" />
 												</span>Japanese</a>
@@ -256,7 +256,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/france.svg" alt="" />
 												</span>French</a>
@@ -268,12 +268,12 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5 my-1">
-										<a href="../../demo3/dist/account/settings.html" class="menu-link px-5">Account Settings</a>
+										<a href="#" class="menu-link px-5">Account Settings</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/authentication/flows/basic/sign-in.html" class="menu-link px-5">Sign Out</a>
+										<a href="#" class="menu-link px-5">Sign Out</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -283,7 +283,7 @@
 									<div class="menu-item px-5">
 										<div class="menu-content px-5">
 											<label class="form-check form-switch form-check-custom form-check-solid pulse pulse-success" for="kt_user_menu_dark_mode_toggle">
-												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="../../demo3/dist/index.html" />
+												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="index.html" />
 												<span class="pulse-ring ms-n1"></span>
 												<span class="form-check-label text-gray-600 fs-7">Dark Mode</span>
 											</label>
@@ -330,7 +330,7 @@
 								</div>
 								<!--end::Aside mobile toggle-->
 								<!--begin::Logo-->
-								<a href="../../demo3/dist/index.html" class="d-flex align-items-center">
+								<a href="#index.html" class="d-flex align-items-center">
 									<img alt="Logo" src="assets/media/logos/logo-demo3-default.svg" class="h-20px" />
 								</a>
 								<!--end::Logo-->
@@ -992,7 +992,7 @@
 											<!--begin::Actions-->
 											<div class="d-flex justify-content-end">
 												<button type="reset" class="btn btn-sm btn-light fw-bolder btn-active-light-primary me-2" data-kt-search-element="advanced-options-form-cancel">Cancel</button>
-												<a href="../../demo3/dist/pages/search/horizontal.html" class="btn btn-sm fw-bolder btn-primary" data-kt-search-element="advanced-options-form-search">Search</a>
+												<a href="#" class="btn btn-sm fw-bolder btn-primary" data-kt-search-element="advanced-options-form-search">Search</a>
 											</div>
 											<!--end::Actions-->
 										</form>
@@ -1237,7 +1237,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../demo3/dist/pns-tata-naskah.html" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="pns-tata-naskah.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/svg/files/pdf.svg" alt="" />
@@ -1261,7 +1261,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../demo3/dist/pns-absensi.html" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="pns-absensi.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/illustrations/abs.gif" alt="" />
@@ -1285,7 +1285,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../demo3/dist/pns-mk-laporan.html" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="pns-mk-laporan.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/svg/files/css.svg" alt="" />
@@ -1309,7 +1309,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../demo3/dist/pns-peg-master.html" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="pns-peg-master.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/svg/files/ai.svg" alt="" />
@@ -1333,7 +1333,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../demo3/dist/pns-helpdesk.html" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="pns-helpdesk.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/svg/files/sql.svg" alt="" />
@@ -1381,7 +1381,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="#" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/svg/files/xml.svg" alt="" />
@@ -1405,7 +1405,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="#" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/svg/files/xml.svg" alt="" />
@@ -1429,7 +1429,7 @@
 										<!--begin::Card body-->
 										<div class="card-body d-flex justify-content-center text-center flex-column p-8">
 											<!--begin::Name-->
-											<a href="../../demo3/dist/pns-tpp-laporan.html" class="text-gray-800 text-hover-primary d-flex flex-column">
+											<a href="pns-tpp-laporan.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
 													<img src="assets/media/svg/files/tif.svg" alt="" />
@@ -2164,7 +2164,7 @@
 				<!--end::Body-->
 				<!--begin::Footer-->
 				<div class="card-footer py-5 text-center" id="kt_activities_footer">
-					<a href="../../demo3/dist/pages/profile/activity.html" class="btn btn-bg-body text-primary">View All Activities
+					<a href="pages/profile/activity.html" class="btn btn-bg-body text-primary">View All Activities
 					<!--begin::Svg Icon | path: icons/duotune/arrows/arr064.svg-->
 					<span class="svg-icon svg-icon-3 svg-icon-primary">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
