--- a/profil.html
+++ b/profil.html
@@ -177,13 +177,13 @@
 								<!--end::Menu separator-->
 								<!--begin::Menu item-->
 								<div class="menu-item px-5">
-									<a href="account/overview.html" class="menu-link px-5">My
+									<a href="#" class="menu-link px-5">My
 										Profile</a>
 								</div>
 								<!--end::Menu item-->
 								<!--begin::Menu item-->
 								<div class="menu-item px-5">
-									<a href="pages/projects/list.html" class="menu-link px-5">
+									<a href="#" class="menu-link px-5">
 										<span class="menu-text">My Projects</span>
 										<span class="menu-badge">
 											<span class="badge badge-light-danger badge-circle fw-bolder fs-7">3</span>
@@ -202,25 +202,25 @@
 									<div class="menu-sub menu-sub-dropdown w-175px py-4">
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/referrals.html"
+											<a href="#"
 												class="menu-link px-5">Referrals</a>
 										</div>
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/billing.html"
+											<a href="#"
 												class="menu-link px-5">Billing</a>
 										</div>
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/statements.html"
+											<a href="#"
 												class="menu-link px-5">Payments</a>
 										</div>
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/statements.html"
+											<a href="#"
 												class="menu-link d-flex flex-stack px-5">Statements
 												<i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip"
 													title="View your statements"></i></a>
@@ -247,7 +247,7 @@
 								<!--end::Menu item-->
 								<!--begin::Menu item-->
 								<div class="menu-item px-5">
-									<a href="account/statements.html" class="menu-link px-5">My
+									<a href="#" class="menu-link px-5">My
 										Statements</a>
 								</div>
 								<!--end::Menu item-->
@@ -268,7 +268,7 @@
 									<div class="menu-sub menu-sub-dropdown w-175px py-4">
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/settings.html"
+											<a href="#"
 												class="menu-link d-flex px-5 active">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/united-states.svg"
@@ -278,7 +278,7 @@
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/settings.html"
+											<a href="#"
 												class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
@@ -287,7 +287,7 @@
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/settings.html"
+											<a href="#"
 												class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/germany.svg"
@@ -297,7 +297,7 @@
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/settings.html"
+											<a href="#"
 												class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/japan.svg" alt="" />
@@ -306,7 +306,7 @@
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3">
-											<a href="account/settings.html"
+											<a href="#"
 												class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/france.svg" alt="" />
@@ -319,13 +319,13 @@
 								<!--end::Menu item-->
 								<!--begin::Menu item-->
 								<div class="menu-item px-5 my-1">
-									<a href="account/settings.html" class="menu-link px-5">Account
+									<a href="#" class="menu-link px-5">Account
 										Settings</a>
 								</div>
 								<!--end::Menu item-->
 								<!--begin::Menu item-->
 								<div class="menu-item px-5">
-									<a href="authentication/flows/basic/sign-in.html"
+									<a href="#"
 										class="menu-link px-5">Sign Out</a>
 								</div>
 								<!--end::Menu item-->
