--- a/pns-absensi.html
+++ b/pns-absensi.html
@@ -51,7 +51,7 @@
 							<!--begin::Menu-->
 							<div class="menu menu-column menu-rounded fw-bold my-auto" id="#kt_aside_menu" data-kt-menu="true">
 								<div class="menu-item">
-									<a class="menu-link" href="../../demo3/dist/index.html">
+									<a class="menu-link" href="index.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
@@ -66,7 +66,7 @@
 									</a>
 								</div>
 								<div class="menu-item">
-									<a class="menu-link" href="../../demo3/dist/profil.html">
+									<a class="menu-link" href="profil.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
@@ -98,7 +98,7 @@
 									<div class="menu-sub menu-sub-accordion">
 
 										<div class="menu-item">
-											<a class="menu-link active" href="../../demo3/dist/pns-absensi.html">
+											<a class="menu-link active" href="pns-absensi.html">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
@@ -106,7 +106,7 @@
 											</a>
 										</div>
 										<div class="menu-item">
-											<a class="menu-link" href="../../demo3/dist/pns-lap-absensi.html">
+											<a class="menu-link" href="pns-lap-absensi.html">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
@@ -114,7 +114,7 @@
 											</a>
 										</div>
 										<div class="menu-item">
-											<a class="menu-link" href="../../demo3/dist/pns-log-absensi.html">
+											<a class="menu-link" href="pns-log-absensi.html">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
@@ -190,12 +190,12 @@
 									<!--end::Menu separator-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/overview.html" class="menu-link px-5">My Profile</a>
+										<a href="#" class="menu-link px-5">My Profile</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/pages/projects/list.html" class="menu-link px-5">
+										<a href="#" class="menu-link px-5">
 											<span class="menu-text">My Projects</span>
 											<span class="menu-badge">
 												<span class="badge badge-light-danger badge-circle fw-bolder fs-7">3</span>
@@ -213,22 +213,22 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/referrals.html" class="menu-link px-5">Referrals</a>
+												<a href="#" class="menu-link px-5">Referrals</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/billing.html" class="menu-link px-5">Billing</a>
+												<a href="#" class="menu-link px-5">Billing</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">Payments</a>
+												<a href="#" class="menu-link px-5">Payments</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link d-flex flex-stack px-5">Statements
+												<a href="#" class="menu-link d-flex flex-stack px-5">Statements
 												<i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip" title="View your statements"></i></a>
 											</div>
 											<!--end::Menu item-->
@@ -251,7 +251,7 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">My Statements</a>
+										<a href="#" class="menu-link px-5">My Statements</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -268,7 +268,7 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5 active">
+												<a href="#" class="menu-link d-flex px-5 active">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/united-states.svg" alt="" />
 												</span>English</a>
@@ -276,7 +276,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
 												</span>Spanish</a>
@@ -284,7 +284,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/germany.svg" alt="" />
 												</span>German</a>
@@ -292,7 +292,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/japan.svg" alt="" />
 												</span>Japanese</a>
@@ -300,7 +300,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/france.svg" alt="" />
 												</span>French</a>
@@ -312,12 +312,12 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5 my-1">
-										<a href="../../demo3/dist/account/settings.html" class="menu-link px-5">Account Settings</a>
+										<a href="#" class="menu-link px-5">Account Settings</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/authentication/flows/basic/sign-in.html" class="menu-link px-5">Sign Out</a>
+										<a href="#" class="menu-link px-5">Sign Out</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -327,7 +327,7 @@
 									<div class="menu-item px-5">
 										<div class="menu-content px-5">
 											<label class="form-check form-switch form-check-custom form-check-solid pulse pulse-success" for="kt_user_menu_dark_mode_toggle">
-												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="../../demo3/dist/index.html" />
+												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="index.html" />
 												<span class="pulse-ring ms-n1"></span>
 												<span class="form-check-label text-gray-600 fs-7">Dark Mode</span>
 											</label>
@@ -361,7 +361,7 @@
 								<!--begin::Breadcrumb-->
 								<ul class="breadcrumb breadcrumb-dot fw-bold fs-base my-1">
 									<li class="breadcrumb-item text-muted">
-										<a href="../../demo3/dist/index.html" class="text-muted">Dashboard</a>
+										<a href="index.html" class="text-muted">Dashboard</a>
 									</li>
 									<li class="breadcrumb-item text-muted">E-Absensi</li>
 								</ul>
@@ -383,7 +383,7 @@
 								</div>
 								<!--end::Aside mobile toggle-->
 								<!--begin::Logo-->
-								<a href="../../demo3/dist/index.html" class="d-flex align-items-center">
+								<a href="index.html" class="d-flex align-items-center">
 									<img alt="Logo" src="assets/media/logos/logo-demo3-default.svg" class="h-20px" />
 								</a>
 								<!--end::Logo-->
@@ -392,12 +392,12 @@
 							<!--begin::Topbar-->
 							<div class="d-flex align-items-center flex-shrink-0">
 								<!--begin::Search-->
-								<a href="../../demo3/dist/index.html" type="button" class="btn btn-light-primary px-6 h-40px"><i class="fa fa-arrow-left"></i> Kembali</a>
+								<a href="index.html" type="button" class="btn btn-light-primary px-6 h-40px"><i class="fa fa-arrow-left"></i> Kembali</a>
 								<!--end::Search-->
 								<!--begin::Activities-->
 								<div class="d-flex align-items-center ms-3 ms-lg-4">
 									<!--begin::Drawer toggle-->
-									<a href="../../demo3/dist/pns-helpdesk.html" class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-outline-secondary w-40px h-40px">
+									<a href="pns-helpdesk.html" class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-outline-secondary w-40px h-40px">
 										<!--begin::Svg Icon | path: icons/duotune/general/gen007.svg-->
 										<span class="svg-icon svg-icon-1">
 											<i class="fa fa-headphones"></i>
