--- a/pns-tata-naskah-surat-kwitansi-internal.html
+++ b/pns-tata-naskah-surat-kwitansi-internal.html
@@ -51,7 +51,7 @@
 							<!--begin::Menu-->
 							<div class="menu menu-column menu-rounded fw-bold my-auto" id="#kt_aside_menu" data-kt-menu="true">
 								<div class="menu-item">
-									<a class="menu-link" href="../../demo3/dist/index.html">
+									<a class="menu-link" href="index.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
@@ -66,7 +66,7 @@
 									</a>
 								</div>
 								<div class="menu-item">
-									<a class="menu-link" href="../../demo3/dist/profil.html">
+									<a class="menu-link" href="profil.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
@@ -116,7 +116,7 @@
 													</span>
 													<div class="menu-sub menu-sub-accordion">
 														<div class="menu-item">
-															<a class="menu-link" href="../../demo3/dist/pns-tata-naskah.html">
+															<a class="menu-link" href="pns-tata-naskah.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -124,7 +124,7 @@
 															</a>
 														</div>
 														<div class="menu-item">
-															<a class="menu-link" href="../../demo3/dist/pns-tata-surat-disposisi-internal.html">
+															<a class="menu-link" href="pns-tata-surat-disposisi-internal.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -145,7 +145,7 @@
 													</span>
 													<div class="menu-sub menu-sub-accordion">
 														<div class="menu-item">
-															<a class="menu-link" href="../../demo3/dist/pns-tata-naskah-surat-keluar-internal.html">
+															<a class="menu-link" href="pns-tata-naskah-surat-keluar-internal.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -153,7 +153,7 @@
 															</a>
 														</div>
 														<div class="menu-item">
-															<a class="menu-link" href="../../demo3/dist/pns-tata-surat-disposisi-surat-keluar-internal.html">
+															<a class="menu-link" href="pns-tata-surat-disposisi-surat-keluar-internal.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -161,7 +161,7 @@
 															</a>
 														</div>
 														<div class="menu-item">
-															<a class="menu-link " href="../../demo3/dist/pns-tata-naskah-surat-keluar-internal-verifikator.html">
+															<a class="menu-link " href="pns-tata-naskah-surat-keluar-internal-verifikator.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -169,7 +169,7 @@
 															</a>
 														</div>
 														<div class="menu-item">
-															<a class="menu-link " href="../../demo3/dist/pns-tata-naskah-surat-keluar-internal-ttd.html">
+															<a class="menu-link " href="pns-tata-naskah-surat-keluar-internal-ttd.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -177,7 +177,7 @@
 															</a>
 														</div>
 														<div class="menu-item">
-															<a class="menu-link " href="../../demo3/dist/pns-tata-naskah-surat-keluar-internal-tembusan.html">
+															<a class="menu-link " href="pns-tata-naskah-surat-keluar-internal-tembusan.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -406,12 +406,12 @@
 									<!--end::Menu separator-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/overview.html" class="menu-link px-5">My Profile</a>
+										<a href="account/overview.html" class="menu-link px-5">My Profile</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/pages/projects/list.html" class="menu-link px-5">
+										<a href="pages/projects/list.html" class="menu-link px-5">
 											<span class="menu-text">My Projects</span>
 											<span class="menu-badge">
 												<span class="badge badge-light-danger badge-circle fw-bolder fs-7">3</span>
@@ -429,22 +429,22 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/referrals.html" class="menu-link px-5">Referrals</a>
+												<a href="account/referrals.html" class="menu-link px-5">Referrals</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/billing.html" class="menu-link px-5">Billing</a>
+												<a href="account/billing.html" class="menu-link px-5">Billing</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">Payments</a>
+												<a href="account/statements.html" class="menu-link px-5">Payments</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link d-flex flex-stack px-5">Statements
+												<a href="account/statements.html" class="menu-link d-flex flex-stack px-5">Statements
 												<i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip" title="View your statements"></i></a>
 											</div>
 											<!--end::Menu item-->
@@ -467,7 +467,7 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">My Statements</a>
+										<a href="account/statements.html" class="menu-link px-5">My Statements</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -484,7 +484,7 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5 active">
+												<a href="account/settings.html" class="menu-link d-flex px-5 active">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/united-states.svg" alt="" />
 												</span>English</a>
@@ -492,7 +492,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="account/settings.html" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
 												</span>Spanish</a>
@@ -500,7 +500,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="account/settings.html" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/germany.svg" alt="" />
 												</span>German</a>
@@ -508,7 +508,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="account/settings.html" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/japan.svg" alt="" />
 												</span>Japanese</a>
@@ -516,7 +516,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="account/settings.html" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/france.svg" alt="" />
 												</span>French</a>
@@ -528,12 +528,12 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5 my-1">
-										<a href="../../demo3/dist/account/settings.html" class="menu-link px-5">Account Settings</a>
+										<a href="account/settings.html" class="menu-link px-5">Account Settings</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/authentication/flows/basic/sign-in.html" class="menu-link px-5">Sign Out</a>
+										<a href="authentication/flows/basic/sign-in.html" class="menu-link px-5">Sign Out</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -543,7 +543,7 @@
 									<div class="menu-item px-5">
 										<div class="menu-content px-5">
 											<label class="form-check form-switch form-check-custom form-check-solid pulse pulse-success" for="kt_user_menu_dark_mode_toggle">
-												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="../../demo3/dist/index.html" />
+												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="index.html" />
 												<span class="pulse-ring ms-n1"></span>
 												<span class="form-check-label text-gray-600 fs-7">Dark Mode</span>
 											</label>
@@ -577,7 +577,7 @@
 								<!--begin::Breadcrumb-->
 								<ul class="breadcrumb breadcrumb-dot fw-bold fs-base my-1">
 									<li class="breadcrumb-item text-muted">
-										<a href="../../demo3/dist/index.html" class="text-muted">Dashboard</a>
+										<a href="index.html" class="text-muted">Dashboard</a>
 									</li>
 									<li class="breadcrumb-item text-muted">Tata Naskah Surat</li>
 									<li class="breadcrumb-item text-muted">Surat Kwitansi</li>
@@ -600,7 +600,7 @@
 								</div>
 								<!--end::Aside mobile toggle-->
 								<!--begin::Logo-->
-								<a href="../../demo3/dist/index.html" class="d-flex align-items-center">
+								<a href="index.html" class="d-flex align-items-center">
 									<img alt="Logo" src="assets/media/logos/logo-demo3-default.svg" class="h-20px" />
 								</a>
 								<!--end::Logo-->
@@ -609,12 +609,12 @@
 							<!--begin::Topbar-->
 							<div class="d-flex align-items-center flex-shrink-0">
 								<!--begin::Search-->
-								<a href="../../demo3/dist/index.html" type="button" class="btn btn-light-primary px-6 h-40px"><i class="fa fa-arrow-left"></i> Kembali</a>
+								<a href="index.html" type="button" class="btn btn-light-primary px-6 h-40px"><i class="fa fa-arrow-left"></i> Kembali</a>
 								<!--end::Search-->
 								<!--begin::Activities-->
 								<div class="d-flex align-items-center ms-3 ms-lg-4">
 									<!--begin::Drawer toggle-->
-									<a href="../../demo3/dist/pns-helpdesk.html" class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-outline-secondary w-40px h-40px">
+									<a href="pns-helpdesk.html" class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-outline-secondary w-40px h-40px">
 										<!--begin::Svg Icon | path: icons/duotune/general/gen007.svg-->
 										<span class="svg-icon svg-icon-1">
 											<i class="fa fa-headphones"></i>
@@ -793,7 +793,7 @@
 												</div>
 												<!--begin::Link-->
 												<div class="d-flex gap-3 mt-5">
-													<a href="../../demo3/dist/pns-tata-naskah-detail-surat-disposisi-internal.html" type="button" class="btn btn-sm btn-light-primary fw-bolder"><i class="fa fa-file-alt me-2"></i>Detail Surat</a>
+													<a href="pns-tata-naskah-detail-surat-disposisi-internal.html" type="button" class="btn btn-sm btn-light-primary fw-bolder"><i class="fa fa-file-alt me-2"></i>Detail Surat</a>
 												</div>
 												<!--end::Link-->
 											</div>
