--- a/profil.html
+++ b/profil.html
@@ -2748,15 +2748,15 @@
 												<div class="card-header mt-6">
 													<!--begin::Card title-->
 													<div class="card-title flex-column">
-														<h2 class="mb-1">User's Schedule</h2>
-														<div class="fs-6 fw-bold text-muted">2 upcoming meetings</div>
+														<h2 class="mb-1">Agenda Kegiatan</h2>
+														<div class="fs-6 fw-bold text-muted">2 Agenda Segera dimulai</div>
 													</div>
 													<!--end::Card title-->
 													<!--begin::Card toolbar-->
 													<div class="card-toolbar">
-														<button type="button" class="btn btn-light-primary btn-sm" data-bs-toggle="modal" data-bs-target="#kt_modal_add_schedule">
+														<a href="https://jadwalinbae.oganilirkab.go.id" type="button" class="btn btn-light-primary btn-sm">
 														<!--SVG file not found: media/icons/duotune/art/art008.svg-->
-														Add Schedule</button>
+														Tambah Agenda</a>
 													</div>
 													<!--end::Card toolbar-->
 												</div>
