--- a/profil.html
+++ b/profil.html
@@ -2754,7 +2754,7 @@
 													<!--end::Card title-->
 													<!--begin::Card toolbar-->
 													<div class="card-toolbar">
-														<a href="https://jadwalinbae.oganilirkab.go.id" type="button" class="btn btn-light-primary btn-sm">
+														<a href="https://jadwalinbae.oganilirkab.go.id" type="button" target="_blank" class="btn btn-light-primary btn-sm"><i class="fa fa-calendar-plus me-2"></i>
 														<!--SVG file not found: media/icons/duotune/art/art008.svg-->
 														Tambah Agenda</a>
 													</div>
