--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
 											<a href="pns-tata-naskah.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/pdf.svg" alt="" />
+													<img src="assets/media/illustrations/email.avif" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1264,7 +1264,7 @@
 											<a href="pns-absensi.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/illustrations/abs.gif" alt="" />
+													<img src="assets/media/illustrations/appointment.jpeg" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1288,7 +1288,7 @@
 											<a href="pns-mk-laporan.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/css.svg" alt="" />
+													<img src="assets/media/illustrations/data-analysis_6657929.png" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1312,7 +1312,7 @@
 											<a href="pns-peg-master.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/ai.svg" alt="" />
+													<img src="assets/media/illustrations/3_pns_edit_1.jpg" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1336,7 +1336,7 @@
 											<a href="pns-helpdesk.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/sql.svg" alt="" />
+													<img src="assets/media/illustrations/52388.jpg" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1360,7 +1360,7 @@
 											<a href="#" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/xml.svg" alt="" />
+													<img src="assets/media/illustrations/cal.jpeg" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1384,7 +1384,7 @@
 											<a href="#" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/xml.svg" alt="" />
+													<img src="assets/media/illustrations/report.png" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1408,7 +1408,7 @@
 											<a href="#" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/xml.svg" alt="" />
+													<img src="assets/media/illustrations/linear.jpeg" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
@@ -1432,7 +1432,7 @@
 											<a href="pns-tpp-laporan.html" class="text-gray-800 text-hover-primary d-flex flex-column">
 												<!--begin::Image-->
 												<div class="symbol symbol-60px mb-5">
-													<img src="assets/media/svg/files/tif.svg" alt="" />
+													<img src="assets/media/illustrations/call.jpeg" alt="" />
 												</div>
 												<!--end::Image-->
 												<!--begin::Title-->
