--- a/pns-tata-naskah-surat-keluar-internal.html
+++ b/pns-tata-naskah-surat-keluar-internal.html
@@ -845,7 +845,7 @@
 							<!--begin::Copyright-->
 							<div class="text-dark order-2 order-md-1">
 								<span class="text-gray-400 fw-bold me-1">Developed by</span>
-								<a href="#" target="_blank" class="text-muted text-hover-primary fw-bold me-2 fs-6">DragonEleven @Pusdatin | Diskominfo Kab. Ogan Ilir 2023</a>
+								<a href="#" target="_blank" class="text-muted text-hover-primary fw-bold me-2 fs-6">Diskominfo Kab. Ogan Ilir 2023</a>
 							</div>
 							<!--end::Copyright-->
 							<!--begin::Menu-->
