--- a/index.html
+++ b/index.html
@@ -1201,6 +1201,109 @@
 							</div>
 							<!--end::Row-->
 
+									<!--begin::Row-->
+									<div class="row g-5 g-xxl-8">
+										<!--begin::Col-->
+										<div class="col-xl-12">
+											<!--begin::Documents toolbar-->
+											<div class="d-flex flex-wrap flex-stack mb-6">
+												<!--begin::Title-->
+												<h3 class="fw-bolder my-2">Tambahan Penghasilan Pegawai
+													<span class="fs-6 text-gray-400 fw-bold ms-1">(TPP)</span></h3>
+												<!--end::Title-->
+											</div>
+											<!--end::Documents toolbar-->
+
+											<div class="row">
+												<div class="col-xl-6 mb-5">
+													<div
+														class="card bg-light-primary border border-1 border-dashed border-primary pt-4">
+														<!--begin::Card header-->
+														<div class="card-header border-0">
+															<!--begin::Card title-->
+															<div class="card-title">
+																<h2 class="fw-bolder">Besaran TPP</h2>
+															</div>
+															<!--end::Card title-->
+															<!--begin::Card toolbar-->
+															<div class="card-toolbar">
+																<a href="#"
+																	class="btn btn-sm btn-flex btn-light-primary"
+																	data-bs-toggle="modal"
+																	data-bs-target="#kt_modal_adjust_balance">
+																	<!--begin::Svg Icon | path: icons/duotune/art/art005.svg-->
+																	<span class="me-2">
+																		<i class="fa fa-calendar-alt"></i>
+																	</span>
+																	<!--end::Svg Icon-->Bulan Oktober</a>
+															</div>
+															<!--end::Card toolbar-->
+														</div>
+														<!--end::Card header-->
+														<!--begin::Card body-->
+														<div class="card-body pt-0">
+															<div class="fw-bolder fs-2">1.700.000
+																<span class="text-muted fs-4 fw-bold">(Rp)</span>
+																<div
+																	class="progress h-10px bg-primary bg-opacity-50 mt-7">
+																	<div class="progress-bar bg-primary"
+																		role="progressbar" style="width: 98%"
+																		aria-valuenow="98" aria-valuemin="0"
+																		aria-valuemax="100">98%</div>
+																</div>
+															</div>
+														</div>
+														<!--end::Card body-->
+													</div>
+												</div>
+
+												<div class="col-xl-6">
+													<div
+														class="card bg-light-primary border border-1 border-dashed border-primary pt-4">
+														<!--begin::Card header-->
+														<div class="card-header border-0">
+															<!--begin::Card title-->
+															<div class="card-title">
+																<h2 class="fw-bolder">Besaran TPP</h2>
+															</div>
+															<!--end::Card title-->
+															<!--begin::Card toolbar-->
+															<div class="card-toolbar">
+																<a href="#"
+																	class="btn btn-sm btn-flex btn-light-primary"
+																	data-bs-toggle="modal"
+																	data-bs-target="#kt_modal_adjust_balance">
+																	<!--begin::Svg Icon | path: icons/duotune/art/art005.svg-->
+																	<span class="me-2">
+																		<i class="fa fa-calendar-alt"></i>
+																	</span>
+																	<!--end::Svg Icon-->Bulan November</a>
+															</div>
+															<!--end::Card toolbar-->
+														</div>
+														<!--end::Card header-->
+														<!--begin::Card body-->
+														<div class="card-body pt-0">
+															<div class="fw-bolder fs-2">1.700.000
+																<span class="text-muted fs-4 fw-bold">(Rp)</span>
+																<div
+																	class="progress h-10px bg-success bg-opacity-50 mt-7">
+																	<div class="progress-bar bg-success"
+																		role="progressbar" style="width: 75%"
+																		aria-valuenow="75" aria-valuemin="0"
+																		aria-valuemax="100">75%</div>
+																</div>
+															</div>
+														</div>
+														<!--end::Card body-->
+													</div>
+												</div>
+											</div>
+										</div>
+										<!--end::Col-->
+									</div>
+									<!--end::Row-->
+
 							<!--begin::Documents toolbar-->
 							<div class="d-flex flex-wrap flex-stack mb-6">
 								<!--begin::Title-->
@@ -1532,7 +1635,7 @@
 							<!--begin::Copyright-->
 							<div class="text-dark order-2 order-md-1">
 								<span class="text-gray-400 fw-bold me-1">Developed by</span>
-								<a href="#" target="_blank" class="text-muted text-hover-primary fw-bold me-2 fs-6">DragonEleven @Pusdatin | Diskominfo Kab. Ogan Ilir 2023</a>
+								<a href="#" target="_blank" class="text-muted text-hover-primary fw-bold me-2 fs-6">Diskominfo Kab. Ogan Ilir 2023</a>
 							</div>
 							<!--end::Copyright-->
 							<!--begin::Menu-->
