--- a/menu_admin/profil.html
+++ b/menu_admin/profil.html
@@ -2950,8 +2950,7 @@
 						<div class="text-dark order-2 order-md-1">
 							<span class="text-gray-400 fw-bold me-1">Developed by</span>
 							<a href="#" target="_blank"
-								class="text-muted text-hover-primary fw-bold me-2 fs-6">DragonEleven
-								@Pusdatin |
+								class="text-muted text-hover-primary fw-bold me-2 fs-6">
 								Diskominfo Kab. Ogan Ilir 2023</a>
 						</div>
 						<!--end::Copyright-->
