--- a/pns-tata-naskah-detail-surat-disposisi-internal.html
+++ b/pns-tata-naskah-detail-surat-disposisi-internal.html
@@ -785,18 +785,18 @@
 											<!--begin::Header-->
 											<div class="card-header align-items-center border-0 mt-4">
 												<h3 class="card-title align-items-start flex-column">
-													<span class="fw-bolder mb-2 text-dark">Log Surat</span>
+													<span class="fw-bolder mb-2 text-dark">Monitoring Surat</span>
 												</h3>
 											</div>
 											<!--end::Header-->
 											<!--begin::Body-->
-											<div class="card-body py-5">
+											<div class="card-body overflow-scroll py-5">
 												<!--begin::Timeline-->
 												<div class="timeline-label mb-15">
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">28/07/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -804,14 +804,17 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Text-->
-														<div class="fw-mormal timeline-content text-muted ps-3">Dibuat / Dikirim TRI SUTOMO</div>
+														<div class="fw-mormal timeline-content text-muted ps-3">
+															<span>Dibuat / Dikirim TRI SUTOMO</span> <br>
+															<span class="badge badge-success">10/08/2023</span>
+														</div>
 														<!--end::Text-->
 													</div>
 													<!--end::Item-->
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">10/08/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -819,9 +822,11 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Content-->
-														<div class="timeline-content d-flex">
-															<span class="fw-bolder text-gray-800 ps-3">Didistribusikan
+														<div class="w-mormal timeline-content text-muted ps-3">
+															<span class="fw-bolder text-gray-800">Didistribusikan
 																TRI SUTOMO - Pranata Komputer Ahli Pertama</span>
+																<br>
+																<span class="badge badge-success">10/08/2023</span>
 														</div>
 														<!--end::Content-->
 														
@@ -830,7 +835,7 @@
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">16/08/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -838,15 +843,18 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Desc-->
-														<div class="timeline-content fw-bolder text-gray-800 ps-3"><span class="text-primary">Dibaca</span> 
-															ARISCATUR PRATOMO - Pranata Komputer / Sub Koordinator Tata Kelola Aplikasi Informatika</div>
+														<div class="timeline-content fw-bolder text-gray-800 ps-3">
+															<span class="text-primary">Dibaca</span> <br>
+															<span>ARISCATUR PRATOMO - Pranata Komputer / Sub Koordinator Tata Kelola Aplikasi Informatika</span> <br>
+															<span class="badge badge-success">10/08/2023</span>
+														</div>
 														<!--end::Desc-->
 													</div>
 													<!--end::Item-->
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">-</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -855,7 +863,7 @@
 														<!--end::Badge-->
 														<!--begin::Text-->
 														<div class="timeline-content fw-mormal text-muted ps-3">
-															<button type="button" class="btn btn-warning btn-sm fw-bold">Disposisikan Kembali</button>
+															<button type="button" class="btn btn-warning btn-sm fw-bold">Disposisikan Surat</button>
 														</div>
 														<!--end::Text-->
 													</div>
