--- a/pns-tata-naskah-detail-surat-masuk-internal.html
+++ b/pns-tata-naskah-detail-surat-masuk-internal.html
@@ -684,10 +684,16 @@
 												<li>094/199/D.KISP/III/2023</li>
 												<li class="fw-bolder mt-2">Sifat :</li>
 												<li>Biasa</li>
-												<li class="fw-bolder mt-2">Ringkasan :</li>
-												<li>-</li>
-												<li class="fw-bolder mt-2">Catatan</li>
-												<li>-</li>
+												<li class="fw-bolder mt-2">Pengirim :</li>
+												<li>
+													<span class="fw-bolder">Tri Sutomo</span><br>
+													<span><i class="fa fa-calendar-alt me-1 text-dark"></i>12/12/2023</span>
+												</li>
+												<li class="fw-bolder mt-2">Penerima :</li>
+												<li>
+													<span class="fw-bolder">Ariscatur Pratomo</span><br>
+													<span><i class="fa fa-calendar-alt me-1 text-dark"></i>12/12/2023</span>
+												</li>
 											</ul>
 										</div>
 										<!--end::Body-->
@@ -708,68 +714,23 @@
 								<div class="col-12 col-md-4">
 									<!--begin::Card-->
 									<div class="card card-flush mb-0">
-										<!--begin::Card header-->
-										<div class="card-header">
-											<!--begin::Card title-->
-											<div class="card-title">
-												<h2 class="badge badge-success ">Sudah dibaca</h2>
-											</div>
-											<!--end::Card title-->
-
-										</div>
-										<!--end::Card header-->
 										<!--begin::Card body-->
 										<div class="card-body pt-0 fs-6">
-											<!--begin::Section-->
-											<div class="mb-7">
-												<!--begin::Details-->
-												<div class="d-flex align-items-center">
-													<!--begin::Info-->
-													<div class="d-flex flex-column">
-														<!--begin::Name-->
-														<a href="#" class="fs-4 fw-bolder text-gray-900 text-hover-primary me-2">Pengirim :</a>
-														<!--end::Name-->
-														<!--begin::Email-->
-														<a href="#" class="fw-bold text-gray-600 text-hover-primary">TRI SUTOMO</a>
-														<a href="#" class="fw-bold text-gray-600 text-hover-primary"><i class="fa fa-calendar-alt me-2"></i> 28 JULI 2023</a>
-														<!--end::Email-->
-													</div>
-													<!--end::Info-->
-												</div>
-												<!--end::Details-->
-											</div>
-											<!--end::Section-->
-											<!--begin::Seperator-->
-											<div class="separator separator-dashed mb-7"></div>
-											<!--end::Seperator-->
-											<!--begin::Section-->
-											<div class="mb-7">
-												<!--begin::Name-->
-												<a href="#" class="fs-4 fw-bolder text-gray-900 text-hover-primary me-2">Penerima :</a><br>
-												<a href="#" class="fw-bold text-gray-600 text-hover-primary">ARISCATUR PRATOMO</a><br>
-												<a href="#" class="fw-bold text-gray-600 text-hover-primary"><i class="fa fa-calendar-alt me-2"></i> 28 JULI 2023</a>
-												<!--end::Email-->
-											</div>
-											<!--end::Section-->
-										
-											<!--begin::Seperator-->
-											<div class="separator separator-dashed mb-7"></div>
-											<!--end::Seperator-->
 											<!--begin::Header-->
 											<div class="card-header align-items-center border-0 mt-4">
 												<h3 class="card-title align-items-start flex-column">
-													<span class="fw-bolder mb-2 text-dark">Log Surat</span>
+													<span class="fw-bolder mb-2 text-dark">Monitoring Surat</span>
 												</h3>
 											</div>
 											<!--end::Header-->
 											<!--begin::Body-->
-											<div class="card-body py-5">
+											<div class="card-body overflow-scroll py-5">
 												<!--begin::Timeline-->
 												<div class="timeline-label mb-15">
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">28/07/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -777,14 +738,17 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Text-->
-														<div class="fw-mormal timeline-content text-muted ps-3">Dibuat / Dikirim TRI SUTOMO</div>
+														<div class="fw-mormal timeline-content text-muted ps-3">
+															<span>Dibuat / Dikirim TRI SUTOMO</span> <br>
+															<span class="badge badge-success">10/08/2023</span>
+														</div>
 														<!--end::Text-->
 													</div>
 													<!--end::Item-->
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">10/08/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -792,9 +756,11 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Content-->
-														<div class="timeline-content d-flex">
-															<span class="fw-bolder text-gray-800 ps-3">Didistribusikan
+														<div class="w-mormal timeline-content text-muted ps-3">
+															<span class="fw-bolder text-gray-800">Didistribusikan
 																TRI SUTOMO - Pranata Komputer Ahli Pertama</span>
+																<br>
+																<span class="badge badge-success">10/08/2023</span>
 														</div>
 														<!--end::Content-->
 														
@@ -803,7 +769,7 @@
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">16/08/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -811,15 +777,18 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Desc-->
-														<div class="timeline-content fw-bolder text-gray-800 ps-3"><span class="text-primary">Dibaca</span> 
-															ARISCATUR PRATOMO - Pranata Komputer / Sub Koordinator Tata Kelola Aplikasi Informatika</div>
+														<div class="timeline-content fw-bolder text-gray-800 ps-3">
+															<span class="text-primary">Dibaca</span> <br>
+															<span>ARISCATUR PRATOMO - Pranata Komputer / Sub Koordinator Tata Kelola Aplikasi Informatika</span> <br>
+															<span class="badge badge-success">10/08/2023</span>
+														</div>
 														<!--end::Desc-->
 													</div>
 													<!--end::Item-->
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">-</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
