--- a/pns-tata-naskah-surat-keluar-internal.html
+++ b/pns-tata-naskah-surat-keluar-internal.html
@@ -679,7 +679,7 @@
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">No. Register</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
-													<input type="date" class="form-control form-control-solid" placeholder="No. Register" />
+													<input type="text" class="form-control form-control-solid" placeholder="No. Register" />
 												</div>
 												<!--end::Input group-->
 											</div>
@@ -689,7 +689,7 @@
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Penerimaan Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
-													<input type="text" class="form-control form-control-solid" placeholder="Tgl. Penerimaan Surat" />
+													<input type="date" class="form-control form-control-solid" placeholder="Tgl. Penerimaan Surat" />
 												</div>
 												<!--end::Input group-->
 											</div>
