--- a/pns-tata-naskah.html
+++ b/pns-tata-naskah.html
@@ -757,7 +757,7 @@
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Terima Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
-													<input type="date" class="form-control form-control-solid" placeholder="Tgl. Penerimaan Surat" />
+													<input class="form-control form-control-solid" type="date" placeholder="Select a date" name="due_date" />
 												</div>
 												<!--end::Input group-->
 											</div>
@@ -3147,6 +3147,7 @@
 		<script src="assets/js/custom/apps/chat/chat.js"></script>
 		<script src="assets/js/custom/modals/create-app.js"></script>
 		<script src="assets/js/custom/modals/upgrade-plan.js"></script>
+		<script src="assets/js/custom/modals/new-target.js"></script>
 		<!--end::Page Custom Javascript-->
 		<!--end::Javascript-->
 	</body>
