--- a/pns-tata-naskah-surat-kwitansi-internal.html
+++ b/pns-tata-naskah-surat-kwitansi-internal.html
@@ -694,7 +694,7 @@
 											<!--end::Col-->
 											<!--begin::Col-->
 											<div class="col-12 col-md-3">
-												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Penerimaan Surat</label>
+												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Terima Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
 													<input type="text" class="form-control form-control-solid" placeholder="Tgl. Penerimaan Surat" />
