--- a/pns-absensi.html
+++ b/pns-absensi.html
@@ -463,22 +463,12 @@
 												data-placeholder="Bulan"
 												class="form-select form-select-solid form-select-lg fw-bold border border-primary border-dashed">
 												<option value="">Select a Country...</option>
-												<option data-kt-flag="flags/afghanistan.svg" value="AF">
-													Afghanistan</option>
-												<option data-kt-flag="flags/aland-islands.svg"
-													value="AX">Aland Islands</option>
-												<option data-kt-flag="flags/albania.svg" value="AL">
-													Albania</option>
-												<option data-kt-flag="flags/algeria.svg" value="DZ">
-													Algeria</option>
-												<option data-kt-flag="flags/american-samoa.svg"
-													value="AS">American Samoa</option>
-												<option data-kt-flag="flags/andorra.svg" value="AD">
-													Andorra</option>
-												<option data-kt-flag="flags/angola.svg" value="AO">
-													Angola</option>
-												<option data-kt-flag="flags/anguilla.svg" value="AI">
-													Anguilla</option>
+												<option value="1">1</option>
+												<option value="2">2</option>
+												<option value="3">3</option>
+												<option value="4">4</option>
+												<option value="5">5</option>
+												<option value="6">6</option>
 												</select>
 											</div>
 											<div class="col-12 col-md-4 mb-3">
@@ -488,22 +478,11 @@
 												data-placeholder="Tahun"
 												class="form-select form-select-solid form-select-lg fw-bold border border-primary border-dashed">
 												<option value="">Select a Country...</option>
-												<option data-kt-flag="flags/afghanistan.svg" value="AF">
-													Afghanistan</option>
-												<option data-kt-flag="flags/aland-islands.svg"
-													value="AX">Aland Islands</option>
-												<option data-kt-flag="flags/albania.svg" value="AL">
-													Albania</option>
-												<option data-kt-flag="flags/algeria.svg" value="DZ">
-													Algeria</option>
-												<option data-kt-flag="flags/american-samoa.svg"
-													value="AS">American Samoa</option>
-												<option data-kt-flag="flags/andorra.svg" value="AD">
-													Andorra</option>
-												<option data-kt-flag="flags/angola.svg" value="AO">
-													Angola</option>
-												<option data-kt-flag="flags/anguilla.svg" value="AI">
-													Anguilla</option>
+												<option value="2026">2026</option>
+												<option value="2025">2025</option>
+												<option value="2024">2024</option>
+												<option value="2023">2023</option>
+												<option value="2022">2022</option>
 												</select>
 											</div>
 											<div class="col-4 pt-3 pt-md-0 text-md-end">
