update verif-kegiatan-luar dan pagination
update verif-kegiatan-luar dan pagination

--- a/pns-lap-absensi.html
+++ b/pns-lap-absensi.html
@@ -96,8 +96,9 @@
 										<span class="menu-arrow"></span>
 									</span>
 									<div class="menu-sub menu-sub-accordion">
+
 										<div class="menu-item">
-											<a class="menu-link" href="pns-absensi.html">
+											<a class="menu-link active" href="pns-absensi.html">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
@@ -105,11 +106,19 @@
 											</a>
 										</div>
 										<div class="menu-item">
-											<a class="menu-link active" href="pns-lap-absensi.html">
+											<a class="menu-link" href="pns-lap-absensi.html">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
 												<span class="menu-title">Laporan Absensi</span>
+											</a>
+										</div>
+										<div class="menu-item">
+											<a class="menu-link" href="pns-verif-kegluar.html">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+												<span class="menu-title">Verifikasi Kegiatan Luar</span>
 											</a>
 										</div>
 										<div class="menu-item">
@@ -642,6 +651,44 @@
 								</div>
 							</div>
 							<!--end:Row-->
+
+							<!--begin::Pagination-->
+							<div class="d-flex flex-stack flex-wrap pt-10">
+								<div class="fs-6 fw-bold text-gray-700">Showing 1 to 10 of 50 entries</div>
+								<!--begin::Pages-->
+								<ul class="pagination">
+									<li class="page-item previous">
+										<a href="#" class="page-link">
+											<i class="previous"></i>
+										</a>
+									</li>
+									<li class="page-item active">
+										<a href="#" class="page-link">1</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">2</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">3</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">4</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">5</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">6</a>
+									</li>
+									<li class="page-item next">
+										<a href="#" class="page-link">
+											<i class="next"></i>
+										</a>
+									</li>
+								</ul>
+								<!--end::Pages-->
+							</div>
+							<!--end::Pagination-->
 
 						</div>
 						<!--end::Container-->
