--- a/pns-absensi.html
+++ b/pns-absensi.html
@@ -114,6 +114,14 @@
 											</a>
 										</div>
 										<div class="menu-item">
+											<a class="menu-link" href="pns-verif-kegluar.html">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+												<span class="menu-title">Verifikasi Kegiatan Luar</span>
+											</a>
+										</div>
+										<div class="menu-item">
 											<a class="menu-link" href="pns-log-absensi.html">
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
@@ -769,115 +777,142 @@
 
 							<!--begin::Row-->
 							<div class="row">
-								
-								<!--begin::Table-->
-								<table class="table align-middle table-row-dashed fs-6 gy-5" id="kt_table_users">
-									<!--begin::Table head-->
-									<thead>
-										<!--begin::Table row-->
-										<tr class="text-start text-dark bg-light border border-dashed fw-bolder fs-7 text-uppercase gs-0">
-											<th class="w-10px ps-2 pe-2">
-												<div class="form-check form-check-sm form-check-custom form-check-solid me-3">
-													<input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_table_users .form-check-input" value="1" />
-												</div>
-											</th>
-											<th class="min-w-125px">Tanggal</th>
-											<th class="min-w-125px">Absen Masuk</th>
-											<th class="min-w-125px">Jam Masuk</th>
-											<th class="min-w-125px">Absen Pulang</th>
-											<th class="min-w-125px">Jam Pulang</th>
-											<th class="min-w-125px">Kegiatan Luar Masuk</th>
-											<th class="text-end pe-2 min-w-100px">Kegiatan Luar Pulang</th>
-										</tr>
-										<!--end::Table row-->
-									</thead>
-									<!--end::Table head-->
-									<!--begin::Table body-->
-									<tbody class="text-gray-600 fw-bold">
-										<!--begin::Table row-->
-										<tr>
-											<!--begin::Checkbox-->
-											<td>
-												<div class="form-check form-check-sm form-check-custom form-check-solid">
-													<input class="form-check-input" type="checkbox" value="1" />
-												</div>
-											</td>
-											<!--end::Checkbox-->
-											<td>02/11/2023</td>
-											<!--begin::User=-->
-											<td class="d-flex align-items-center">
-												<!--begin:: Avatar -->
-												<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-													<a href="#">
-														<div class="symbol-label">
-															<img src="assets/media/avatars/150-1.jpg" alt="Emma Smith" class="w-100" />
-														</div>
-													</a>
-												</div>
-												<!--end::Avatar-->
-												<!--begin::User details-->
-												<div class="d-flex flex-column">
-													<a href="#" class="text-gray-800 text-hover-primary mb-1">
-														104.6523415</a>
-													<span>Lat : -3.2603373</span>
-												</div>
-												<!--begin::User details-->
-											</td>
-											<!--end::User=-->
-											<!--begin::Role=-->
-											<td>07:36:06</td>
-											<!--end::Role=-->
-											<!--begin::Last login=-->
-											<!--begin::User=-->
-											<td class="d-flex align-items-center">
-												<!--begin:: Avatar -->
-												<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-													<a href="#">
-														<div class="symbol-label">
-															<img src="assets/media/avatars/150-1.jpg" alt="Emma Smith" class="w-100" />
-														</div>
-													</a>
-												</div>
-												<!--end::Avatar-->
-												<!--begin::User details-->
-												<div class="d-flex flex-column">
-													<a href="#" class="text-gray-800 text-hover-primary mb-1">
-														104.6523415</a>
-													<span>Lat : -3.2603373</span>
-												</div>
-												<!--begin::User details-->
-											</td>
-											<!--end::User=-->
-											<!--end::Last login=-->
-											<!--begin::Two step=-->
-											<td>16:13:40</td>
-											<!--end::Two step=-->
-											<!--begin::Two step=-->
-											<td>-</td>
-											<!--end::Two step=-->
-											<!--begin::Two step=-->
-											<td>-</td>
-											<!--end::Two step=-->
-										</tr>
-										<!--end::Table row-->
-									</tbody>
-									<!--end::Table body-->
-								</table>
-								<!--end::Table-->
+								<div class="table-responsive">
+									<!--begin::Table-->
+									<table class="table align-middle table-row-dashed fs-6 gy-5" id="kt_table_users">
+										<!--begin::Table head-->
+										<thead>
+											<!--begin::Table row-->
+											<tr class="text-start text-dark bg-light border border-dashed fw-bolder fs-7 text-uppercase gs-0">
+												<th class="w-10px ps-2 pe-2">
+													<div class="form-check form-check-sm form-check-custom form-check-solid me-3">
+														<input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_table_users .form-check-input" value="1" />
+													</div>
+												</th>
+												<th class="min-w-125px">Tanggal</th>
+												<th class="min-w-125px">Absen Masuk</th>
+												<th class="min-w-125px">Jam Masuk</th>
+												<th class="min-w-125px">Absen Pulang</th>
+												<th class="min-w-125px">Jam Pulang</th>
+												<th class="min-w-125px">Kegiatan Luar Masuk</th>
+												<th class="text-end pe-2 min-w-100px">Kegiatan Luar Pulang</th>
+											</tr>
+											<!--end::Table row-->
+										</thead>
+										<!--end::Table head-->
+										<!--begin::Table body-->
+										<tbody class="text-gray-600 fw-bold">
+											<!--begin::Table row-->
+											<tr>
+												<!--begin::Checkbox-->
+												<td>
+													<div class="form-check form-check-sm form-check-custom form-check-solid">
+														<input class="form-check-input" type="checkbox" value="1" />
+													</div>
+												</td>
+												<!--end::Checkbox-->
+												<td>02/11/2023</td>
+												<!--begin::User=-->
+												<td class="d-flex align-items-center">
+													<!--begin:: Avatar -->
+													<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
+														<a href="#">
+															<div class="symbol-label">
+																<img src="assets/media/avatars/150-1.jpg" alt="Emma Smith" class="w-100" />
+															</div>
+														</a>
+													</div>
+													<!--end::Avatar-->
+													<!--begin::User details-->
+													<div class="d-flex flex-column">
+														<a href="#" class="text-gray-800 text-hover-primary mb-1">
+															104.6523415</a>
+														<span>Lat : -3.2603373</span>
+													</div>
+													<!--begin::User details-->
+												</td>
+												<!--end::User=-->
+												<!--begin::Role=-->
+												<td>07:36:06</td>
+												<!--end::Role=-->
+												<!--begin::Last login=-->
+												<!--begin::User=-->
+												<td class="d-flex align-items-center">
+													<!--begin:: Avatar -->
+													<div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
+														<a href="#">
+															<div class="symbol-label">
+																<img src="assets/media/avatars/150-1.jpg" alt="Emma Smith" class="w-100" />
+															</div>
+														</a>
+													</div>
+													<!--end::Avatar-->
+													<!--begin::User details-->
+													<div class="d-flex flex-column">
+														<a href="#" class="text-gray-800 text-hover-primary mb-1">
+															104.6523415</a>
+														<span>Lat : -3.2603373</span>
+													</div>
+													<!--begin::User details-->
+												</td>
+												<!--end::User=-->
+												<!--end::Last login=-->
+												<!--begin::Two step=-->
+												<td>16:13:40</td>
+												<!--end::Two step=-->
+												<!--begin::Two step=-->
+												<td>-</td>
+												<!--end::Two step=-->
+												<!--begin::Two step=-->
+												<td>-</td>
+												<!--end::Two step=-->
+											</tr>
+											<!--end::Table row-->
+										</tbody>
+										<!--end::Table body-->
+									</table>
+									<!--end::Table-->
+								</div>
 							</div>
 							<!--end:Row-->
 
-							<div class="row">
-								<div class="card">
-									<div class="col-2">										
-										<div>
-											<span class="badge badge-danger">Tidak Absen Pulang</span>
-										</div>
-									</div>
-								
-								</div>
+							<!--begin::Pagination-->
+							<div class="d-flex flex-stack flex-wrap pt-10">
+								<div class="fs-6 fw-bold text-gray-700">Showing 1 to 10 of 50 entries</div>
+								<!--begin::Pages-->
+								<ul class="pagination">
+									<li class="page-item previous">
+										<a href="#" class="page-link">
+											<i class="previous"></i>
+										</a>
+									</li>
+									<li class="page-item active">
+										<a href="#" class="page-link">1</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">2</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">3</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">4</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">5</a>
+									</li>
+									<li class="page-item">
+										<a href="#" class="page-link">6</a>
+									</li>
+									<li class="page-item next">
+										<a href="#" class="page-link">
+											<i class="next"></i>
+										</a>
+									</li>
+								</ul>
+								<!--end::Pages-->
 							</div>
-
+							<!--end::Pagination-->
 						</div>
 						<!--end::Container-->
 					</div>
